--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    
+    <link rel="shortcut icon" href="%PUBLIC_URL%/wave.ico" />
+  
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>F A S Frontend</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
